ДЗ на тему "Способы поиска нужного HTML-элемента"
* Всплывающие окна
* Навигационное меню
* Слайдер изображений

--- a/element-search/menu/task.html
+++ b/element-search/menu/task.html
@@ -1,56 +1,128 @@
 <!doctype html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Menu</title>
     <link rel="stylesheet" href="task.css">
-    <link rel="stylesheet" href="../../assets/css/style.css" />
-</head>
-<body>
+    <link rel="stylesheet" href="../../assets/css/style.css"/>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
-        </div>
-        <h1 class="header__title">
-            Домашнее задание к занятию 1.2 «Способы поиска нужного HTML-элемента». Навигационное меню.
-        </h1>
+      <div class="logo__container">
+        <a href="https://netology.ru/" class="logo__link"></a>
+      </div>
+      <h1 class="header__title">
+        Домашнее задание к занятию 1.2 «Способы поиска нужного HTML-элемента». Навигационное меню.
+      </h1>
     </header>
     <ul class="menu menu_main">
-        <li class="menu__item">
-            <a href="https://netology.ru/" class="menu__link">Главная</a>
-        </li>
-        <li class="menu__item">
-            <a href="" class="menu__link">О компании</a>
-            <ul class="menu menu_sub">
-                <li class="menu__item">
-                    <a href="https://netology.ru/clients" class="menu__link">Клиенты</a>
-                </li>
-                <li class="menu__item">
-                    <a href="https://netology.ru/service" class="menu__link">Обслуживание</a>
-                </li>
-                <li class="menu__item">
-                    <a href="https://netology.ru/wearecool" class="menu__link">Награды</a>
-                </li>
-            </ul>
-        </li>
-        <li class="menu__item">
-            <a href="" class="menu__link">Услуги</a>
-            <ul class="menu menu_sub">
-                <li class="menu__item">
-                    <a href="https://netology.ru/learn" class="menu__link">Обучение</a>
-                </li>
-                <li class="menu__item">
-                    <a href="https://netology.ru/consult" class="menu__link">Консультации</a>
-                </li>
-            </ul>
-        </li>
-        <li class="menu__item">
-            <a href="https://netology.ru/contacts" class="menu__link">Контакты</a>
-        </li>
+      <li class="menu__item">
+        <a href="https://netology.ru/" class="menu__link">Главная</a>
+      </li>
+      <li class="menu__item">
+        <a href="" class="menu__link">О компании</a>
+        <ul class="menu menu_sub">
+          <li class="menu__item">
+            <a href="https://netology.ru/clients" class="menu__link">Клиенты</a>
+          </li>
+          <li class="menu__item">
+            <a href="https://netology.ru/service" class="menu__link">Обслуживание</a>
+          </li>
+          <li class="menu__item">
+            <a href="https://netology.ru/wearecool" class="menu__link">Награды</a>
+          </li>
+        </ul>
+      </li>
+      <li class="menu__item">
+        <a href="" class="menu__link">Услуги</a>
+        <ul class="menu menu_sub">
+          <li class="menu__item">
+            <a href="https://netology.ru/learn" class="menu__link">Обучение</a>
+          </li>
+          <li class="menu__item">
+            <a href="https://netology.ru/consult" class="menu__link">Консультации</a>
+          </li>
+        </ul>
+      </li>
+      <li class="menu__item">
+        <a href="https://netology.ru/contacts" class="menu__link">Контакты</a>
+      </li>
+    </ul>
+    <p>
+      <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cumque deserunt eos, explicabo illum inventore laborum magnam, minus molestiae nemo nesciunt nobis optio porro praesentium, quidem ratione sequi temporibus voluptatem!</span><span>Architecto dicta distinctio dolore minima nihil obcaecati placeat temporibus. Dolore doloremque earum enim harum illo impedit labore nam nostrum optio perferendis possimus quia quisquam, quo ratione rem repellat sed temporibus!</span><span>A eaque est fugit ipsum soluta, veniam voluptas? Aliquam aperiam aut autem fugit ipsum iusto maxime minus nam nulla possimus, quasi, quis quod, recusandae repellendus rerum sapiente sunt velit vero?</span><span>Blanditiis delectus doloremque fuga inventore laborum porro rerum, sed. Amet aperiam architecto cum dignissimos doloribus ea eligendi, error est, id illum libero maiores modi molestiae possimus quo tempora vel veniam?</span><span>Assumenda dignissimos eveniet excepturi incidunt nam quo repellat repudiandae voluptatibus. A autem dicta, doloremque ea et eum facere incidunt inventore maxime minima molestiae, non, odio omnis perspiciatis quasi quia repellat.</span><span>Aliquam aperiam assumenda beatae commodi deleniti dignissimos eligendi fuga fugiat fugit impedit magnam magni molestiae necessitatibus nihil nostrum odit omnis perspiciatis quaerat, quidem quis quo quos tempore vero vitae voluptatum!</span><span>Ab ea eveniet fugiat magnam qui quia, ratione reprehenderit ullam? Doloribus ducimus et illum impedit modi mollitia natus nesciunt odio ullam unde? Dolore et explicabo, facere iusto sunt tenetur voluptatem.</span><span>Aliquam assumenda dolor itaque laudantium magni neque quod rem ullam? Ab architecto at delectus doloremque ea fugit id illum, iste molestiae nam numquam, sunt temporibus, vero voluptates voluptatum? Molestias, voluptatibus!</span><span>Accusantium aperiam consequuntur ipsa ipsam neque nisi perferendis praesentium quas quasi tempora? Amet assumenda corporis earum excepturi iure magnam odit perspiciatis, possimus quaerat reiciendis, reprehenderit, sequi sint suscipit tenetur voluptatibus!</span><span>Aliquid mollitia nam sequi? Amet atque beatae distinctio doloremque dolorum ea eveniet exercitationem facilis fugit iste libero odit optio sequi sint sit soluta sunt ut, voluptatum! Culpa deleniti quo voluptate.</span>
+    </p>
+    <ul class="menu menu_main">
+      <li class="menu__item">
+        <a href="https://netology.ru/" class="menu__link">Главная</a>
+      </li>
+      <li class="menu__item">
+        <a href="" class="menu__link">О компании</a>
+        <ul class="menu menu_sub">
+          <li class="menu__item">
+            <a href="https://netology.ru/clients" class="menu__link">Клиенты</a>
+          </li>
+          <li class="menu__item">
+            <a href="https://netology.ru/service" class="menu__link">Обслуживание</a>
+          </li>
+          <li class="menu__item">
+            <a href="https://netology.ru/wearecool" class="menu__link">Награды</a>
+          </li>
+        </ul>
+      </li>
+      <li class="menu__item">
+        <a href="" class="menu__link">Услуги</a>
+        <ul class="menu menu_sub">
+          <li class="menu__item">
+            <a href="https://netology.ru/learn" class="menu__link">Обучение</a>
+          </li>
+          <li class="menu__item">
+            <a href="https://netology.ru/consult" class="menu__link">Консультации</a>
+          </li>
+        </ul>
+      </li>
+      <li class="menu__item">
+        <a href="https://netology.ru/contacts" class="menu__link">Контакты</a>
+      </li>
+    </ul>
+    <p>
+      <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid cumque deserunt eos, explicabo illum inventore laborum magnam, minus molestiae nemo nesciunt nobis optio porro praesentium, quidem ratione sequi temporibus voluptatem!</span><span>Architecto dicta distinctio dolore minima nihil obcaecati placeat temporibus. Dolore doloremque earum enim harum illo impedit labore nam nostrum optio perferendis possimus quia quisquam, quo ratione rem repellat sed temporibus!</span><span>A eaque est fugit ipsum soluta, veniam voluptas? Aliquam aperiam aut autem fugit ipsum iusto maxime minus nam nulla possimus, quasi, quis quod, recusandae repellendus rerum sapiente sunt velit vero?</span><span>Blanditiis delectus doloremque fuga inventore laborum porro rerum, sed. Amet aperiam architecto cum dignissimos doloribus ea eligendi, error est, id illum libero maiores modi molestiae possimus quo tempora vel veniam?</span><span>Assumenda dignissimos eveniet excepturi incidunt nam quo repellat repudiandae voluptatibus. A autem dicta, doloremque ea et eum facere incidunt inventore maxime minima molestiae, non, odio omnis perspiciatis quasi quia repellat.</span><span>Aliquam aperiam assumenda beatae commodi deleniti dignissimos eligendi fuga fugiat fugit impedit magnam magni molestiae necessitatibus nihil nostrum odit omnis perspiciatis quaerat, quidem quis quo quos tempore vero vitae voluptatum!</span><span>Ab ea eveniet fugiat magnam qui quia, ratione reprehenderit ullam? Doloribus ducimus et illum impedit modi mollitia natus nesciunt odio ullam unde? Dolore et explicabo, facere iusto sunt tenetur voluptatem.</span><span>Aliquam assumenda dolor itaque laudantium magni neque quod rem ullam? Ab architecto at delectus doloremque ea fugit id illum, iste molestiae nam numquam, sunt temporibus, vero voluptates voluptatum? Molestias, voluptatibus!</span><span>Accusantium aperiam consequuntur ipsa ipsam neque nisi perferendis praesentium quas quasi tempora? Amet assumenda corporis earum excepturi iure magnam odit perspiciatis, possimus quaerat reiciendis, reprehenderit, sequi sint suscipit tenetur voluptatibus!</span><span>Aliquid mollitia nam sequi? Amet atque beatae distinctio doloremque dolorum ea eveniet exercitationem facilis fugit iste libero odit optio sequi sint sit soluta sunt ut, voluptatum! Culpa deleniti quo voluptate.</span>
+    </p>
+    <ul class="menu menu_main">
+      <li class="menu__item">
+        <a href="https://netology.ru/" class="menu__link">Главная</a>
+      </li>
+      <li class="menu__item">
+        <a href="" class="menu__link">О компании</a>
+        <ul class="menu menu_sub">
+          <li class="menu__item">
+            <a href="https://netology.ru/clients" class="menu__link">Клиенты</a>
+          </li>
+          <li class="menu__item">
+            <a href="https://netology.ru/service" class="menu__link">Обслуживание</a>
+          </li>
+          <li class="menu__item">
+            <a href="https://netology.ru/wearecool" class="menu__link">Награды</a>
+          </li>
+        </ul>
+      </li>
+      <li class="menu__item">
+        <a href="" class="menu__link">Услуги</a>
+        <ul class="menu menu_sub">
+          <li class="menu__item">
+            <a href="https://netology.ru/learn" class="menu__link">Обучение</a>
+          </li>
+          <li class="menu__item">
+            <a href="https://netology.ru/consult" class="menu__link">Консультации</a>
+          </li>
+        </ul>
+      </li>
+      <li class="menu__item">
+        <a href="https://netology.ru/contacts" class="menu__link">Контакты</a>
+      </li>
     </ul>
     <script src="task.js"></script>
-</body>
+  </body>
 </html>
