Домашнее задание к лекции «DOM»
* Появление элементов при прокрутке
* Ротатор рекламы
* Онлайн-читалка

--- a/dom/ads/task.html
+++ b/dom/ads/task.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -8,21 +8,98 @@
     <title>Ротатор рекламы</title>
     <link rel="stylesheet" href="task.css">
     <link rel="stylesheet" href="../../assets/css/style.css">
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
-        </div>
-        <h1 class="header__title">
-            Домашнее задание к занятию 2.1 «DOM». Ротатор рекламы.
-        </h1>
+      <div class="logo__container">
+        <a href="https://netology.ru/" class="logo__link"></a>
+      </div>
+      <h1 class="header__title">
+        Домашнее задание к занятию 2.1 «DOM». Ротатор рекламы.
+      </h1>
     </header>
     <main class="content">
-        <div class="card">
-            <p>
-                Я
-                <span class="rotator">
+      <div class="card">
+        <p>
+          Я
+          <span class="rotator">
+                <span class="rotator__case rotator__case_active" data-speed="3000" data-color="red">Бог JS</span>
+                <span class="rotator__case" data-speed="2500" data-color="green">лучший программист на земле</span>
+                <span class="rotator__case" data-speed="100" data-color="#000">покорю этот мир</span>
+                <span class="rotator__case" data-speed="100" data-color="red">учусь в Нетологии</span>
+                <span class="rotator__case" data-speed="500" data-color="blue">счастливый как никто</span>
+                <span class="rotator__case" data-speed="2000" data-color="gray">радуюсь жизни</span>
+              </span>
+        </p>
+      </div>
+    </main>
+    <main class="content">
+      <div class="card">
+        <p>
+          Я
+          <span class="rotator">
+                <span class="rotator__case rotator__case_active" data-speed="100" data-color="red">Бог JS</span>
+                <span class="rotator__case" data-speed="200" data-color="green">Лучший программист на земле</span>
+                <span class="rotator__case" data-speed="200" data-color="#000">покорю этот мир</span>
+                <span class="rotator__case" data-speed="300" data-color="red">учусь в Нетологии</span>
+                <span class="rotator__case" data-speed="500" data-color="blue">счастливый как никто</span>
+                <span class="rotator__case" data-speed="200" data-color="gray">радуюсь жизни</span>
+              </span>
+        </p>
+      </div>
+    </main>
+    <main class="content">
+      <div class="card">
+        <p>
+          Я
+          <span class="rotator">
+                <span class="rotator__case rotator__case_active" data-speed="1000" data-color="red">Бог JS</span>
+                <span class="rotator__case" data-speed="300" data-color="green">Лучший программист на земле</span>
+                <span class="rotator__case" data-speed="1400" data-color="#000">покорю этот мир</span>
+                <span class="rotator__case" data-speed="1000" data-color="red">учусь в Нетологии</span>
+                <span class="rotator__case" data-speed="5000" data-color="yellow">счастливый как никто</span>
+                <span class="rotator__case" data-speed="2010" data-color="gray">радуюсь жизни</span>
+                <span class="rotator__case" data-speed="7000" data-color="purple">иду в институт</span>
+              </span>
+        </p>
+      </div>
+    </main>
+    <main class="content">
+      <div class="card">
+        <p>
+          Я
+          <span class="rotator">
+                <span class="rotator__case rotator__case_active" data-speed="1000" data-color="red">Бог JS</span>
+                <span class="rotator__case" data-speed="2000" data-color="green">Лучший программист на земле</span>
+                <span class="rotator__case" data-speed="165" data-color="#000">покорю этот мир</span>
+                <span class="rotator__case" data-speed="1000" data-color="red">учусь в Нетологии</span>
+                <span class="rotator__case" data-speed="700" data-color="blue">счастливый как никто</span>
+                <span class="rotator__case" data-speed="900" data-color="gray">радуюсь жизни</span>
+              </span>
+        </p>
+      </div>
+    </main>
+    <main class="content">
+      <div class="card">
+        <p>
+          Я
+          <span class="rotator">
+                <span class="rotator__case rotator__case_active" data-speed="1000" data-color="red">Бог JS</span>
+                <span class="rotator__case" data-speed="2400" data-color="green">Лучший программист на земле</span>
+                <span class="rotator__case" data-speed="800" data-color="#000">покорю этот мир</span>
+                <span class="rotator__case" data-speed="7000" data-color="red">учусь в Нетологии</span>
+                <span class="rotator__case" data-speed="500" data-color="blue">счастливый как никто</span>
+                <span class="rotator__case" data-speed="2000" data-color="gray">радуюсь жизни</span>
+                <span class="rotator__case" data-speed="9000" data-color="orange">люблю читать</span>
+              </span>
+        </p>
+      </div>
+    </main>
+    <main class="content">
+      <div class="card">
+        <p>
+          Я
+          <span class="rotator">
                 <span class="rotator__case rotator__case_active" data-speed="1000" data-color="red">Бог JS</span>
                 <span class="rotator__case" data-speed="2000" data-color="green">Лучший программист на земле</span>
                 <span class="rotator__case" data-speed="1000" data-color="#000">покорю этот мир</span>
@@ -30,10 +107,25 @@
                 <span class="rotator__case" data-speed="500" data-color="blue">счастливый как никто</span>
                 <span class="rotator__case" data-speed="200" data-color="gray">радуюсь жизни</span>
               </span>
-            </p>
-        </div>
+        </p>
+      </div>
     </main>
-    
+    <main class="content">
+      <div class="card">
+        <p>
+          Я
+          <span class="rotator">
+                <span class="rotator__case rotator__case_active" data-speed="1300" data-color="red">Бог JS</span>
+                <span class="rotator__case" data-speed="2700" data-color="green">Лучший программист на земле</span>
+                <span class="rotator__case" data-speed="600" data-color="#000">покорю этот мир</span>
+                <span class="rotator__case" data-speed="1000" data-color="red">учусь в Нетологии</span>
+                <span class="rotator__case" data-speed="500" data-color="blue">счастливый как никто</span>
+                <span class="rotator__case" data-speed="8000" data-color="tomato">радуюсь жизни</span>
+              </span>
+        </p>
+      </div>
+    </main>
+
     <script src="task.js"></script>
-</body>
+  </body>
 </html>
